borre degrade en la palabra servicios

--- a/views/servicios.html
+++ b/views/servicios.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <!-- Fin de header -->
-    <main class="gradiente">
+    <main>
         <!-- Inicio de servicios -->
         <div>
             <h2>Servicios</h2>
