agregamos lorem en peluqueria

--- a/views/servicios.html
+++ b/views/servicios.html
@@ -37,6 +37,8 @@
         </div>
         <ul>
             <li>Peluqueria</li>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus asperiores earum eaque, unde velit sed totam accusamus, enim accusantium nisi fuga reiciendis similique nulla illo ad maiores molestiae ipsam at.
+            </p>
             <li>Veterinaria</li>
         </ul>
     </main>
