--- a/views/servicios.html
+++ b/views/servicios.html
@@ -33,7 +33,7 @@
     <main>
         <!-- Inicio de servicios -->
         <div>
-            <h2>Servicios</h2>
+            <h2 class="gradiente">Servicios</h2>
         </div>
         <ul>
             <li>Peluqueria</li>
