--- a/views/productos.html
+++ b/views/productos.html
@@ -39,7 +39,7 @@
             <li>Alimentos</li>
             <li class="accesoriosimg"><img src="../assets/imag/oip.jpg" alt=""></li>
             <li>Accesorios</li>
-            <li><img src="../assets/imag/acces.jpg" alt=""></li>
+            <li class="row"><img src="../assets/imag/acces.jpg" alt=""></li>
             <li>Cuchas</li>
             <li><img src="../assets/imag/cuchita.jpg" alt=""></li>
             <li>Transportadores</li>
