agregue bootstrap en index y servicios

--- a/views/servicios.html
+++ b/views/servicios.html
@@ -37,10 +37,10 @@
             <h2 class="gradiente">Servicios</h2>
         </div>
         <ul>
-            <li>Peluqueria</li>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus asperiores earum eaque, unde velit sed totam accusamus, enim accusantium nisi fuga reiciendis similique nulla illo ad maiores molestiae ipsam at.
+            <li class="text-center mt-4">Peluqueria</li>
+            <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus asperiores earum eaque, unde velit sed totam accusamus, enim accusantium nisi fuga reiciendis similique nulla illo ad maiores molestiae ipsam at.
             </p>
-            <li>Veterinaria</li>
+            <li class="text-center mt-4">Veterinaria</li>
         </ul>
     </main>
     <!-- Fin de Servicios -->
