--- a/css/estilos.css
+++ b/css/estilos.css
@@ -99,6 +99,12 @@ footer {
 .fa-facebook-f:before{
     font-size: 1.5rem;
 }
+.fa-instagram:before{
+    font-size: 1.5rem;
+}
+.fa-twitter:before{
+    font-size: 1.5rem;  
+}
 .footer__flex {
     display: flex;
     justify-content: space-around;
@@ -184,17 +190,14 @@ p{
     body {
         background-color: rgb(245, 245, 21);
     }
-    .gridPadre{
-        display: grid;
-        grid-template-areas: 
-        "titulo"
-        "texto" 
-        "imagen";
-        grid-template-rows: 150px auto auto;
-        grid-template-columns: 100%;
-    }
+        main .portada img{
+            width: 100%;
+            height: 0.2%;
+            padding: 0.2%;
+            border: none;
+        }
     .gradiente {
         background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
     }
 }
-/* fin vista mobile nosotros */
+/* fin vista mobile index y servicios*/
