--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -57,11 +57,22 @@
             </div>
             <div>
                 <h4>Redes Sociales</h4>
-                <p>
-                    Facebook
-                    Twitter
-                    Instagram
-                </p>
+                <ul class="mt-4 list unstyled">
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+            </div>
             </div>
             <div>
                 <h4>Medios de pago</h4>
