--- a/views/productos.html
+++ b/views/productos.html
@@ -5,33 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="shortcut icon" href="../assets/imag/logo1.jpeg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Productos</title>
 </head>
 
 <body>
     <!-- Inicio de header -->
-    <header>
-        <h1>Canario Pet Shop</h1>
-        <h2>Tienda para mascotas</h2>
-        <div class="logo__flex">
-            <a href="index.html"><img src="../assets/imag/logo1.jpeg" alt=logo></a>
+    <header class="container-fluid">
+        <h1 class="text-center text-uppercase mt-4">Canario Pet Shop</h1>
+        <h2 class="text-center">Tienda para mascotas</h2>
+
+        <div class="row">
+            <div class="logo__flex col-sm-12 my-1">
+                <a href="index.html"><img src="../assets/imag/logo1.jpeg" alt=logo></a>
+            </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="nosotros.html">NOSOTROS</a></li>
-                <li><a href="productos.html">PRODUCTOS</a></li>
-                <li><a href="servicios.html">SERVICIOS</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
-            </ul>
+
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="navbar-brand" href="../index.html">INICIO</a>
+                        <a class="nav-link" aria-current="page" href="../views/nosotros.html">NOSOTROS</a>
+                        <a class="nav-link" href="../views/productos.html">PRODUCTOS</a>
+                        <a class="nav-link" href="../views/servicios.html">SERVICIOS</a>
+                        <a class="nav-link" href="../views/contacto.html">CONTACTO</a>
+                    </div>
+                </div>
+                <div class="carrito"><i class="bi bi-cart4"></i></div>
+            </div>
         </nav>
+
     </header>
     <!-- Fin de header -->
     <main>
-        <div class="animacionproductos">
+        <div class="animacion_titulos">
             <h2>Productos</h2>
         </div>
         <!-- Incio imagenes de productos -->
@@ -52,10 +70,9 @@
         <div class="footer__flex">
             <div>
                 <h4>Contactanos</h4>
-                <p> Wsp: 5493513845741</p>
-                <p>Telefono: 5493513845741</p>
-                <p>Direccion: Av. La Cordillera 3946</p>
-                <p>E-mail:tiendaonline@canariopetshop.com</p>
+                <p><i class="bi bi-whatsapp">+5493513845741</i></p>
+                <p><i class="bi bi-geo-alt">Av. La Cordillera 3946</i></p>
+                <p><i class="bi bi-envelope">tiendaonline@canariopetshop.com</i></p>
             </div>
             <div>
                 <h4>Redes Sociales</h4>
@@ -73,23 +90,48 @@
                     <li class="list-inline-item">
                         <a href="">
                             <i class="fab fa-twitter"></i>
+
                         </a>
-            </div>
+                    </li>
+                </ul>
             </div>
             <div>
                 <h4>Medios de pago</h4>
-                <p>Visa
-                    Mastercard
-                    Transferencia
-                    Mercado Pago</p>
+                <ul class="mt-4 list unstyled">
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-visa"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-mastercard"></i>
+                        </a>
+
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-amex"></i>
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="">
+                            <i class="fab fa-cc-paypal"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="footer__creditos">
-            Desarrollado por Anto Scapazzoni
-            <div>
+            <p> Desarrollado por Anto Scapazzoni</p>
+        </div>
     </footer>
     <!-- Fin de footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
