correccion de responsive nosotros

--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -55,16 +55,19 @@
             <h2>Nosotros</h2>
         </div>
         <div class="text_nosotros">
-        <p>Somos el Pet-shop más completo de la Argentina con 5 años de experiencia;
-            brindándoles a nuestros clientes la mejor atención y calidad que se merecen.
-            Contamos con una amplia variedad de productos para las mascotas,
-            además del alimento balanceado de reconocidas marcas, tenemos productos de higiene y belleza,
-            juguetes, correas, collares, comederos y transportadoras, entre otros.
-            En nuestros locales y nuestra web encontraras la mas grande variedad de productos.
-            Además, contamos con profesionales altamente capacitados para la atención de tu mascota y así poder
-            brindarte una atención personalizada para que tengas la mejor experiencia en nuestra tienda. </p>
+            <p>Somos el Pet-shop más completo de la Argentina con 5 años de experiencia;
+                brindándoles a nuestros clientes la mejor atención y calidad que se merecen.
+                Contamos con una amplia variedad de productos para las mascotas,
+                además del alimento balanceado de reconocidas marcas, tenemos productos de higiene y belleza,
+                juguetes, correas, collares, comederos y transportadoras, entre otros.
+                En nuestros locales y nuestra web encontraras la mas grande variedad de productos.
+                Además, contamos con profesionales altamente capacitados para la atención de tu mascota y así poder
+                brindarte una atención personalizada para que tengas la mejor experiencia en nuestra tienda.
+            </p>
         </div>
-            <img class="nosotros1" src="../assets/imag/nosotros.jpg" alt="imagen nosotros">
+        <div>
+            <img src="../assets/imag/nosotros.jpg" alt="imagen nosotros">
+        </div>
     </main>
 
     <!-- Fin de main -->
