--- a/css/estilos.css
+++ b/css/estilos.css
@@ -132,6 +132,7 @@ footer {
     background-color: grey;
     background-repeat: no-repeat;
     background-size: cover;
+    position: fixed;
     bottom: 0;
     width: 100%;
 
@@ -202,32 +203,31 @@ footer {
 .gridPadre {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px auto;
+    grid-template-rows: 50px 50px;
     grid-template-areas:
         "titulo titulo"
         "texto imagen";
     justify-items: left;
-
 }
 
 h2 {
     grid-area: titulo;
     text-align: left;
+    padding-top:0.5px ;
 }
 
-.text_nosotros {
-    grid-area: texto;
-    padding: 1cm;
+.text_nosotros{
+    grid-area:texto;
     margin: 1cm;
     height: 1cm;
-}
-
-.nosotros1 {
-    grid-area: imagen;
+    padding-bottom: 400px;
+    padding-top: 20px;
 }
 
 .gridPadre img {
+    grid-area:imagen;
     width: 600px;
+    padding-bottom: 400px;
 }
 
 /* fin main de nosotros */
@@ -287,9 +287,10 @@ h2 {
 
 /* inicio vista mobile index_nosotros_servicios */
 @media only screen and (max-width: 420px) {
+   /* inicio @media index */
     body {
         background-color: rgb(245, 245, 21);
-        height: 1000px;
+       height: 1000px;
 
     }
 
@@ -305,38 +306,48 @@ h2 {
         padding-top: 70px;
         height: 0%
     }
-
+/* fin de index */
+/* inicio  @media nosotros */
     .gridPadre {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 50px auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: 120px;
         grid-template-areas:
-            "titulo titulo"
-            "texto imagen";
-        justify-items: left;
+            "titulo"
+            "imagen"
+            "texto";
+        justify-items: center;
 
     }
 
     h2 {
         grid-area: titulo;
-        text-align: left;
+        text-align: center;
+        padding-bottom: 100px;
+        height: 1px;
     }
 
     .text_nosotros {
         grid-area: texto;
-        padding: 1cm;
-        margin: 1cm;
-        height: 1cm;
-    }
-
-    .nosotros1 {
-        grid-area: imagen;
+        margin:1cm;
+        height:1cm;
+        padding-bottom: 600px;
+        padding-top: 10px;
+        text-align: center;
     }
 
     .gridPadre img {
-        width: 400px;
+        grid-area:imagen;
+        width: 350px;
+        padding-bottom: 1px;
     }
-
+/* fin @media nosotros */
+/* inicio @media servicios */
+.gradiente {
+    background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
+}
+/* fin @media servicios */
+/* inicio @media footer */
     footer {
         color: white;
         line-height: 6px;
@@ -400,18 +411,13 @@ h2 {
         display: flex;
         justify-content: space-around;
         font-size: 0.6rem;
-
+        
     }
 
     .footer__creditos {
         font-size: 0.6rem;
         text-align: center;
     }
-
-
-    .gradiente {
-        background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
-    }
+    /* fin @media footer */
 }
-
-/* fin vista mobile index y servicios*/
+/* fin vista mobile index nosotros y servicios*/
