--- a/views/productos.html
+++ b/views/productos.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
+    <meta name="description" content="Venta de accesorios, cuchas y alimentos par atus mascotas">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="shortcut icon" href="../assets/imag/logo1.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Productos</title>
+    <title>Canario Pet Shop-Productos</title>
 </head>
 
 <body>
@@ -23,9 +25,8 @@
             </div>
         </div>
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -50,16 +51,94 @@
             <h2>Productos</h2>
         </div>
         <!-- Incio imagenes de productos -->
-        <ul class="productosventa">
-            <li>Alimentos</li>
-            <li class="accesoriosimg"><img src="../assets/imag/oip.jpg" alt=""></li>
-            <li>Accesorios</li>
-            <li class="row"><img src="../assets/imag/acces.jpg" alt=""></li>
-            <li>Cuchas</li>
-            <li><img src="../assets/imag/cuchita.jpg" alt=""></li>
-            <li>Transportadores</li>
-            <li><img src="../assets/imag/transportadores.jpg" alt=""></li>
-        </ul>
+        <h4>Alimentos</h4>
+        <div class="alimentos_flex">
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/catchow.jpg" class="card-img-top" alt="catchow">
+                <div class="card-body">
+                    <h5 class="card-title">Cat Chow Defense Plus</h5>
+                    <p class="card-text">Alimento Cat Chow Defense Plus para gato adulto sabor pescado en bolsa de 15
+                        kg.</p>
+                    <a href="" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/dogui2.jpg" class="card-img-top" alt="dogui">
+                <div class="card-body">
+                    <h5 class="card-title">Dogui Recetas Caseras</h5>
+                    <p class="card-text">Alimento Dogui Recetas Caseras para perro adulto sabor carne y vegetales en
+                        bolsa de 21 kg</p>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/excgato.jpg" class="card-img-top" alt="excellentgato">
+                <div class="card-body">
+                    <h5 class="card-title">Excellent Gato Adulto</h5>
+                    <p class="card-text">Purina Excellent Gato Adulto Skin Care 7.5 Kg</p>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <h4>Accesorios</h4>
+        <div class="accesorios_flex">
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imag/comederos.jpg" class="card-img-top" alt="comederos">
+            <div class="card-body">
+                <h5 class="card-title">Comedero</h5>
+                <p class="card-text">Comedero De Acero Inoxidable 21 Cm Base Perro Antideslizante</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imag/transportador.png" class="card-img-top" alt="transportador">
+            <div class="card-body">
+                <h5 class="card-title">Transportador para mascotas</h5>
+                <p class="card-text">Bolso Transportador Perro Gato Varios Diseños S 23x16x36</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imag/collar.jpg" class="card-img-top" alt="collar">
+            <div class="card-body">
+                <h5 class="card-title">Collar</h5>
+                <p class="card-text">Collar Perro Chico/mediano Con Panuelo Bandana 40cm</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+        </div>
+    </div>
+        <h4>Cuchas</h4>
+        <div class="cuchas_flex">
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imag/cucha1.jpg" class="card-img-top" alt="cucharayada">
+            <div class="card-body">
+                <h5 class="card-title">Cucha para mascota Rayas Negras</h5>
+                <p class="card-text"> Posee acabado antimanchas y un almohadón doble faz para adaptarse a diferentes
+                    temperaturas.</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imag/cucha3.jpg" class="card-img-top" alt="cuchademadera">
+            <div class="card-body">
+                <h5 class="card-title">Cucha Safari</h5>
+                <p class="card-text"> Están construidas con estructura de madera dura, 2x1 pulgadas, atornillada en
+                    todas sus uniones, revestida en su totalidad en machimbre de primera calidad.</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../assets/imag/cucha4.jpg" class="card-img-top" alt="cuchabubble">
+            <div class="card-body">
+                <h5 class="card-title">Cucha Bubble</h5>
+                <p class="card-text"> Esfera realizada con polietileno de alta densidad, resistente al impacto y con
+                    protección UV que permite que los colores permanezcan inalterables con el paso del tiempo</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+        </div>
+    </div>
     </main>
     <!-- Fin de imagenes de productos -->
     <!-- Inicio de footer -->
