--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,11 @@
+.contenedor__flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center; }
+
 * {
   margin: 0;
   padding: 0;
@@ -57,20 +65,12 @@ header img {
 /* fin header canario */
 /* inicio portada index */
 .carousel-inner {
-  height: 800px; }
-
-.contenedor__flex {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center; }
+  height: 700px; }
 
 .tituloportada {
   text-align: center;
   color: grey;
-  font-size: 30px;
+  font-size: 40px;
   /* nombre */
   animation-name: efecto;
   /* veces que se ejecuta */
@@ -114,6 +114,10 @@ footer {
     font-size: 1.5rem; }
     footer ul li a {
       color: white; }
+  footer .bi {
+    font-size: 1.2rem; }
+    footer .bi p {
+      font-size: 1.5rem; }
 
 .footer__flex {
   display: flex;
@@ -133,29 +137,11 @@ footer {
   grid-template-areas: "titulo titulo" "texto imagen";
   justify-items: left; }
 
-h2 {
+.animacion_titulos {
   grid-area: titulo;
   text-align: left;
-  padding-top: 0.5px; }
-
-.text_nosotros {
-  grid-area: texto;
-  margin: 1cm;
-  height: 1cm;
-  padding-bottom: 400px;
-  padding-top: 20px; }
-
-.gridPadre img {
-  grid-area: imagen;
-  width: 600px;
-  padding-bottom: 400px; }
-
-/* fin main de nosotros */
-/* animacion de titulos nosotros productos servicios contacto */
-.animacion_titulos {
   color: grey;
-  font-size: 30px;
-  padding: 2cm;
+  padding: 1cm;
   height: 1cm;
   /* nombre */
   animation-name: efecto;
@@ -176,20 +162,101 @@ h2 {
   100% {
     color: gray; } }
 
-/* fin animaciones titulo nosotros */
-/* inicio gradiente servicios */
-.gradiente {
-  background-image: linear-gradient(yellow, orange); }
+.text_nosotros {
+  grid-area: texto;
+  margin: 1cm;
+  height: 1cm;
+  padding-bottom: 200px;
+  padding-top: 10px; }
 
-/* fin gradiente servicios */
-/* inicio escala imagenes producto */
-.accesoriosimg {
-  width: 200px; }
+.gridPadre img {
+  grid-area: imagen;
+  width: 600px;
+  padding-bottom: 400px; }
 
-.accesoriosimg:hover {
-  transform: scale(2, 2); }
+/* fin main de nosotros */
+/* inicio productos*/
+h4 {
+  color: white;
+  text-align: start;
+  padding: 0.5cm; }
 
-/* fin escala imagenes producto */
+.alimentos_flex, .accesorios_flex {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row; }
+  .alimentos_flex img:hover, .accesorios_flex img:hover {
+    transform: scale(2, 2); }
+
+/* extend */
+/* extend */
+.cuchas_flex {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  padding-bottom: 300px; }
+  .cuchas_flex img:hover {
+    transform: scale(2, 2); }
+
+/* fin productos */
+/* inicio  servicios */
+.gridpadre_servicios {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  gap: 20px;
+  justify-items: stretch;
+  align-content: space-between;
+  justify-content: space-between;
+  align-items: stretch; }
+
+.peluqueria {
+  grid-area: 1 / 1 / 2 / 2;
+  padding: 2cm;
+  border: 1cm; }
+
+.imgpeluqueria {
+  grid-area: 1 / 2 / 2 / 3;
+  border: 1cm;
+  padding: 2cm; }
+
+.veterinaria {
+  grid-area: 2 / 1 / 3 / 2;
+  padding: 2cm;
+  padding-bottom: 300px;
+  padding-top: 60px; }
+
+.imgveterinaria {
+  grid-area: 2 / 2 / 3 / 3;
+  padding-bottom: 300px;
+  padding-top: 60px;
+  padding: 2cm; }
+
+/* fin servicios */
+/* inicio contacto */
+.fondocontacto {
+  background-image: url(../assets/imag/contacto.jpg);
+  height: 800px; }
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: flex-end;
+  align-items: flex-end;
+  justify-content: space-around;
+  margin: 5cm;
+  height: 5cm;
+  font-size: 1.2rem;
+  color: white;
+  padding: 2cm;
+  padding-bottom: 650px; }
+
+/* fin contacto */
 /* inicio vista mobile index_nosotros_servicios */
 @media only screen and (max-width: 420px) {
   /* inicio @media index */
