--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,8 @@
 @import "variables";
+@import "normalize";
+@import "mixins";
+@import "extend";
+
 * {
     margin: 0;
     padding: 0;
@@ -6,12 +10,12 @@
 }
 
 body {
-    background-color:$color-primary ;
+    background-color: map-get($map: $palette, $key:"primary" );
 }
 
 /* inicio header canario */
 header {
-    background-color:$color-secondary;
+    background-color: map-get($map:$palette , $key: "secondary" );
 }
 
 header h1 {
@@ -71,22 +75,15 @@ header img {
 
 /* inicio portada index */
 .carousel-inner {
-    height: 800px;
+    height: 700px;
 }
 
-.contenedor__flex {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .tituloportada {
     text-align: center;
     color: grey;
-    font-size: 30px;
+    font-size: 40px;
     /* nombre */
     animation-name: efecto;
     /* veces que se ejecuta */
@@ -136,14 +133,26 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
- ul{
-    li{
-        font-size: 1.5rem;
-        a{
-            color: white;
+
+    ul {
+        li {
+            font-size: 1.5rem;
+
+            a {
+                color: white;
+            }
         }
     }
-}
+
+    .bi {
+        font-size: 1.2rem;
+
+        p {
+            font-size: 1.5rem;
+        }
+    }
+
+
 }
 
 .footer__flex {
@@ -171,32 +180,12 @@ footer {
     justify-items: left;
 }
 
-h2 {
+
+.animacion_titulos {
     grid-area: titulo;
     text-align: left;
-    padding-top:0.5px ;
-}
-
-.text_nosotros{
-    grid-area:texto;
-    margin: 1cm;
-    height: 1cm;
-    padding-bottom: 400px;
-    padding-top: 20px;
-}
-
-.gridPadre img {
-    grid-area:imagen;
-    width: 600px;
-    padding-bottom: 400px;
-}
-
-/* fin main de nosotros */
-/* animacion de titulos nosotros productos servicios contacto */
-.animacion_titulos {
     color: grey;
-    font-size: 30px;
-    padding: 2cm;
+    padding: 1cm;
     height: 1cm;
     /* nombre */
     animation-name: efecto;
@@ -226,33 +215,138 @@ h2 {
     }
 }
 
-/* fin animaciones titulo nosotros */
-
-
-/* inicio gradiente servicios */
-.gradiente {
-    background-image: linear-gradient(yellow, orange);
+.text_nosotros {
+    grid-area: texto;
+    margin: 1cm;
+    height: 1cm;
+    padding-bottom: 200px;
+    padding-top: 10px;
 }
 
-/* fin gradiente servicios */
-/* inicio escala imagenes producto */
-
-.accesoriosimg {
-    width: 200px;
+.gridPadre img {
+    grid-area: imagen;
+    width: 600px;
+    padding-bottom: 400px;
 }
 
-.accesoriosimg:hover {
-    transform: scale(2, 2);
+/* fin main de nosotros */
+/* inicio productos*/
+h4{
+    color: white;
+    text-align: start;
+    padding: 0.5cm;
+    
+}
+.alimentos_flex {
+    display: flex;
+    align-content: flex-start;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    img:hover{
+        transform: scale(2, 2);
+
+    }
+ 
+}
+/* extend */
+.accesorios_flex{
+    @extend .alimentos_flex
+   
 }
 
-/* fin escala imagenes producto */
+/* extend */
+
+.cuchas_flex{
+    display: flex;
+    align-content: flex-start;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    padding-bottom: 300px;
+    img:hover{
+        transform: scale(2, 2);
+
+    }
+}
+
+/* fin productos */
+
+/* inicio  servicios */
+.gridpadre_servicios {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: 20px;
+    justify-items: stretch;
+    align-content: space-between;
+    justify-content: space-between;
+    align-items: stretch;
+    
+}
+
+.peluqueria {
+    grid-area:1 / 1 / 2 / 2;
+    padding: 2cm;
+    border: 1cm;
+
+}
+
+.imgpeluqueria {
+    grid-area: 1 / 2 / 2 / 3; 
+    border: 1cm;
+    padding: 2cm;
+    
+}
+
+.veterinaria {
+    grid-area: 2 / 1 / 3 / 2;
+    padding: 2cm;
+    padding-bottom: 300px;
+    padding-top: 60px;
+
+}
+
+.imgveterinaria {
+    grid-area: 2 / 2 / 3 / 3;
+    padding-bottom: 300px;
+    padding-top: 60px;
+    padding: 2cm;
+    
+}
+
+/* fin servicios */
+
+
+/* inicio contacto */
+.fondocontacto {
+    background-image: url(../assets/imag/contacto.jpg);
+    height: 800px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: flex-end;
+    align-items: flex-end;
+    justify-content: space-around;
+    margin: 5cm;
+    height: 5cm;
+    font-size: 1.2rem;
+    color: white;
+    padding: 2cm;
+    padding-bottom: 650px;
+}
+/* fin contacto */
 
 /* inicio vista mobile index_nosotros_servicios */
 @media only screen and (max-width: 420px) {
-   /* inicio @media index */
+
+    /* inicio @media index */
     body {
         background-color: rgb(245, 245, 21);
-       height: 1000px;
+        height: 1000px;
 
     }
 
@@ -268,8 +362,9 @@ h2 {
         padding-top: 70px;
         height: 0%
     }
-/* fin de index */
-/* inicio  @media nosotros */
+
+    /* fin de index */
+    /* inicio  @media nosotros */
     .gridPadre {
         display: grid;
         grid-template-columns: 1fr;
@@ -291,25 +386,27 @@ h2 {
 
     .text_nosotros {
         grid-area: texto;
-        margin:1cm;
-        height:1cm;
+        margin: 1cm;
+        height: 1cm;
         padding-bottom: 600px;
         padding-top: 10px;
         text-align: center;
     }
 
     .gridPadre img {
-        grid-area:imagen;
+        grid-area: imagen;
         width: 350px;
         padding-bottom: 1px;
     }
-/* fin @media nosotros */
-/* inicio @media servicios */
-.gradiente {
-    background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
-}
-/* fin @media servicios */
-/* inicio @media footer */
+
+    /* fin @media nosotros */
+    /* inicio @media servicios */
+    .gradiente {
+        background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
+    }
+
+    /* fin @media servicios */
+    /* inicio @media footer */
     footer {
         color: white;
         line-height: 6px;
@@ -373,13 +470,15 @@ h2 {
         display: flex;
         justify-content: space-around;
         font-size: 0.6rem;
-        
+
     }
 
     .footer__creditos {
         font-size: 0.6rem;
         text-align: center;
     }
+
     /* fin @media footer */
 }
+
 /* fin vista mobile index nosotros y servicios*/
