--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
+    <meta name="description" content="Somos el Pet-shop más completo de la Argentina con 5 años de experiencia.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="shortcut icon" href="../assets/imag/logo1.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Nosotros</title>
+    <title>Canario Pet Shop-Nosotros</title>
 </head>
 
 <body>
