--- a/views/servicios.html
+++ b/views/servicios.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
+    <meta name="description" content="Servicios de peluqueria y veterinaria">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-    <link rel="shortcut icon" href="../assets/imag/logo1.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Servicios</title>
+    <title>Canario Pet Shop-Servicios</title>
 
 </head>
 
@@ -24,9 +26,8 @@
             </div>
         </div>
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -49,16 +50,50 @@
     <main>
         <!-- Inicio de servicios -->
         <div class="animacion_titulos">
-            <h2 class="gradiente">Servicios</h2>
+            <h2>Servicios</h2>
         </div>
-        <ul>
-            <li class="text-center mt-4">Peluqueria</li>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus asperiores earum eaque, unde velit sed
-                totam accusamus, enim accusantium nisi fuga reiciendis similique nulla illo ad maiores molestiae ipsam
-                at.
-            </p>
-            <li class="text-center mt-4">Veterinaria</li>
-        </ul>
+        <section class="gridpadre_servicios">
+            <div class="peluqueria">
+                <h3>Peluqueria</h3>
+                <p>Ofrecemos todos los servicios de peluquería e higiene para mascotas:
+                     baños, limpieza de oídos y glándulas, corte de uñas, cliperwork, limpieza de plantares, entre otros.
+                </p>
+                <p>
+                    El cuidado del pelo de tu mascota es esencial para mantenerla linda y saludable. En Canario ofrecemos baños, cortes y peinados que combinan estos dos aspectos fundamentales para el bienestar de tu mascota.
+                </p>
+            </div>
+            <div class="imgpeluqueria">
+                <img src="../assets/imag/pelu1.jpg" alt="peluqueria">
+            </div>
+            <div class="veterinaria">
+                <h3>Veterinaria</h3>
+                <p>Canario Pet Shop brinda la mejor atención veterinaria para tu mascota. Para ello, seleccionamos los
+                    mejores profesionales veterinarios, quienes continúan en capacitación y formación constante,
+                    para darle la más cálida y profesional atención a tu mascota.
+                </P>
+                <ul>
+                    <li>
+                        Laboratorio
+                    </li>
+                    <p>Estudios de laboratorio en nuestra sucursal.</p>
+                    <li>
+                        Ecografías
+                    </li>
+                    <p>Servicio de ecografías con equipo móvil para diagnósticos expeditivos.</p>
+                    <li>
+                        Castraciones
+                    </li>
+                    <p>Castraciones de machos y hembras, caninos y felinos.</p>
+                    <li>
+                        Vacunación
+                    </li>
+                    <p>Pequeños y grandes animales.</p>
+                </ul>
+            </div>
+            <div class="imgveterinaria">
+                <img src="../assets/imag/vetechico.jpg" alt="veterinaria">
+            </div>
+        </section>
     </main>
     <!-- Fin de Servicios -->
     <!--  Inicio de footer -->
